--- a/bootstrap-5.3.2-dist/bootstrap-5.3.2-dist/css/bootstrap.css
+++ b/bootstrap-5.3.2-dist/bootstrap-5.3.2-dist/css/bootstrap.css
@@ -13958,9 +13958,17 @@ fieldset:disabled .btn {
 
 /*# sourceMappingURL=bootstrap.css.map */
 
-@media (min-width: 1000px){
-.center-middle{
-  width: max(900px);
-  margin: auto;
+@media (min-width: 1000px) {
+  .center-middle {
+    width: max(900px);
+    margin: auto;
+  }
 }
+
+#thank-you-message {
+  display: none;
+}
+
+#thank-you-message.show {
+  display: block;
 }
